--- a/index.html
+++ b/index.html
@@ -1,71 +1,76 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sushan Khanal — College Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <div class="avatar">SK</div>
-      <div>
-        <h1>Sushan Khanal</h1>
-        <p class="lead">Computer Science Student • Aspiring Software Developer • College Project Portfolio</p>
-        <p>Email: <strong>sushan.khanal@example.com</strong> • Phone: <strong>+977-98XXXXXXXX</strong></p>
-      </div>
-    </header>
+  <header>
+    <h1>My Portfolio</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <div class="grid">
-      <main>
-        <section class="card">
-          <h2>About</h2>
-          <p>Hi — I'm Sushan, a college student passionate about building practical software solutions. This portfolio showcases academic & personal projects made during my degree.</p>
-        </section>
+  <section id="about">
+    <h2>About Me</h2>
+    
+    <!-- Profile Image -->
+    <img src="profile.webp" alt="Profile Photo" width="200" style="border-radius: 50%;">
 
-        <section class="card">
-          <h2>Selected Projects</h2>
-          <div class="project">
-            <h3>University Placement & Internship Management System</h3>
-            <p>A full-stack project to manage student internship placements, company registrations, and reporting.</p>
-            <button class="toggle-details">View Details</button>
-            <div class="details">
-              <ul>
-                <li>Features: Student profiles, application tracking, reports.</li>
-                <li>Role: Database design, backend APIs, UI pages.</li>
-              </ul>
-            </div>
-          </div>
-        </section>
+    <p>Hello! I’m a passionate web designer specializing in crafting clean, modern, and responsive digital experiences. With a strong focus on user-centered design, I aim to create websites that are not only visually appealing but also highly functional and accessible across all devices. Whether working on personal portfolios, business websites, or interactive user interfaces, I’m dedicated to delivering designs that align with both brand identity and user needs. Continuously learning and adapting to the latest web standards, I strive to blend creativity with usability to build engaging and professional web solutions.</p>
+    <ul>
+      <li>HTML5</li>
+      <li>CSS3</li>
+      <li>JavaScript</li>
+    </ul>
+  </section>
 
-        <section class="card">
-          <h2>Education</h2>
-          <p><strong>Bachelor of Computer Science</strong> — Your College Name (Expected graduation: 2026)</p>
-        </section>
-      </main>
-
-      <aside>
-        <div class="card">
-          <h2>Skills</h2>
-          <div class="skills">
-            <span class="skill">HTML</span>
-            <span class="skill">CSS</span>
-            <span class="skill">JavaScript</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <h2>Contact</h2>
-          <p>Email: <a href="mailto:sushan.khanal@example.com">sushan.khanal@example.com</a></p>
-        </div>
-      </aside>
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="filter-buttons">
+      <button onclick="filterProjects('all')">All</button>
+      <button onclick="filterProjects('web')">Web</button>
+      <button onclick="filterProjects('uiux')">UI/UX</button>
     </div>
-
-    <footer>
-      Tip: Replace placeholder text before submitting your project.
-    </footer>
+   <div class="project-gallery">
+  <div class="project-card" data-category="web">
+    <img src="web1.png" alt="Web Project 1">
+    <h3>Web Project 1</h3>
   </div>
+
+  <div class="project-card" data-category="uiux">
+    <img src="uiux1.png" alt="UI/UX Project 1">
+    <h3>UI/UX Project 1</h3>
+  </div>
+
+  <div class="project-card" data-category="web">
+    <img src="web2.png" alt="Web Project 2">
+    <h3>Web Project 2</h3>
+  </div>
+
+  <div class="project-card" data-category="uiux">
+    <img src="uiux2.png" alt="UI/UX Project 2">
+    <h3>UI/UX Project 2</h3>
+  </div>
+</div>
+
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <form>
+      <input type="text" placeholder="Name" required>
+      <input type="email" placeholder="Email" required>
+      <textarea placeholder="Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
 
   <script src="script.js"></script>
 </body>
