--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>About Me</h2>
     
     <!-- Profile Image -->
-    <img src="profile.webp" alt="Profile Photo" width="200" style="border-radius: 50%;">
+    <img src="sushan.jpg" alt="Profile Photo" width="200" style="border-radius: 50%;">
 
     <p>Hello! I’m a passionate web designer specializing in crafting clean, modern, and responsive digital experiences. With a strong focus on user-centered design, I aim to create websites that are not only visually appealing but also highly functional and accessible across all devices. Whether working on personal portfolios, business websites, or interactive user interfaces, I’m dedicated to delivering designs that align with both brand identity and user needs. Continuously learning and adapting to the latest web standards, I strive to blend creativity with usability to build engaging and professional web solutions.</p>
     <ul>
